{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "0cf30e2c-1603-4e23-ab80-60f7e06ed3bc",
            "actions": [
                {
                    "name": "Rotation",
                    "type": "Value",
                    "id": "b10c645a-48fc-4d02-8250-a7d094b6707d",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Teleportation",
                    "type": "Button",
                    "id": "3276617f-82c2-4a4f-bc3f-72df19e7db5d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Thrust",
                    "type": "Button",
                    "id": "e2b98a90-7778-4d02-93e3-d2d3f49f7500",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)"
                },
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "b697df3d-ad55-4056-84a6-12a175689c5f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "SelfDestruct",
                    "type": "Button",
                    "id": "18134ced-5749-4d86-9160-03b1ec883967",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "cccc5db4-3fc9-410a-beca-82e6cff9c73d",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "1ba28e68-0590-4ca2-93a2-27421a692710",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "4892b44b-6785-4306-8cfb-cf3d0cc4beab",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6e804995-b710-4a76-8ba5-16a738705c9d",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Teleportation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d1f571f4-0298-4c45-8a26-8c707ec16a49",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Thrust",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e00ca39b-2c6a-4242-af88-74197c56c06a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cb7fafdc-1ed6-4b43-9114-2fbe821f78f5",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "SelfDestruct",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MenuInputActions",
            "id": "2d761369-f734-4725-8b64-408b86d3b392",
            "actions": [
                {
                    "name": "StartGame",
                    "type": "Button",
                    "id": "8280b474-29fe-43db-a1d0-963a59e27286",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "HelpScreen",
                    "type": "Button",
                    "id": "03273e2d-0f27-43b8-aba1-47a2c7c7a3af",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "780ef51c-e123-454b-a67a-35747355177f",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "StartGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c6283a00-14cd-44d2-ba31-6ed1881c0518",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "HelpScreen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1dbff9b2-3145-4090-af72-459977dabaf6",
                    "path": "<Keyboard>/f1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "HelpScreen",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "EndSceneInput",
            "id": "9af88ea6-41d9-4be0-bb33-a2d284b4d66d",
            "actions": [
                {
                    "name": "LeaveScene",
                    "type": "Button",
                    "id": "fd1b3ef1-5dfc-4ced-a072-e6e10b2c3941",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b27ca8c7-4e09-459d-a394-392c2732cf24",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "LeaveScene",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "592dddee-6610-443c-9442-e05e7a8e213c",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "LeaveScene",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "EnterNameInput",
            "id": "c093ca53-25db-47dc-873e-8d4669eab6fd",
            "actions": [
                {
                    "name": "LeaveScene",
                    "type": "Button",
                    "id": "8d0622d6-ad7a-4516-a782-cbf7b9a1b8c9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "EnterName",
                    "type": "Button",
                    "id": "ea15b61f-b52d-4504-85b6-ca00f0f07daa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "32b14ee3-98e9-4566-95be-c9158235b128",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "LeaveScene",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "086ca276-fbec-49cc-85d0-d03a3ad75c3e",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "EnterName",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}